2003-02-10  Trey Matteson  <trey@apple.com>

	Following the recent fix for ensuring that we always have a FormDelegate,
	when we need a default policy delegate we use a shared one instead of allocing
	a new one each time, which then would leak.

	This included getting rid of the initWithWebController: method in the 
	WebDefaultPolicyDelegate API.  The arg was not used.

        Reviewed by Richard

        * WebKit.pbproj/project.pbxproj:  new private header
        * WebView.subproj/WebController.m:
        (-[WebController policyDelegate]):  use shared delegate if none set
        * WebView.subproj/WebDefaultPolicyDelegate.h:
        * WebView.subproj/WebDefaultPolicyDelegate.m:
        (+[WebDefaultPolicyDelegate _sharedWebPolicyDelegate]):  return shared instance
        * WebView.subproj/WebDefaultPolicyDelegatePrivate.h: Added.
        * WebView.subproj/WebFormDelegate.m:
        (+[WebFormDelegate _sharedWebFormDelegate]):  Trivial renaming of static.

2003-02-10  Richard Williamson   <rjw@apple.com>

        Update API issues document.
        
        Reviewed by me.

        * API-Issues.rtf:

2003-02-10  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3168888 - REGRESSION: many downloads fail (due to -36 error from write)

        Reviewed by darin.

        * Downloads.subproj/WebDownload.m:
        (-[WebDownload writeForkData:isDataFork:]):

2003-02-10  Trey Matteson  <trey@apple.com>

	Make sure we have a FormsDelegate installed with NOP behavior if our client
	does not set one.  Editing forms was broken for Ed by the introduction
	of the new FormDelegate.

        Reviewed by Darin.

        * WebKit.pbproj/project.pbxproj:  Added new header file.
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _formDelegate]):  Use shared delegate if none set yet.
        * WebView.subproj/WebFormDelegatePrivate.h:  New header.
        * WebView.subproj/WebFormDelegate.h:  Nit cleanup.
        * WebView.subproj/WebFormDelegate.m: